--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
