--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
+    "react-world-flags": "^1.6.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "slick-carousel": "^1.8.1",
